---------------------------------------------------------------------------
Version 3.20.5 [v3-stable] (rgerhards), 2009-0?-??
- fixed a bug in configure.ac which resulted in problems with
  environment detection - thanks to Michael Biebl for the patch
- fixed a potential segfault problem in gssapi code
  thanks to varmojfekoj for the patch
- doc enhance: provide standard template for MySQL module and instructions
  on how to modify schema
---------------------------------------------------------------------------
Version 3.20.4 [v3-stable] (rgerhards), 2009-02-09
- bugfix: inconsistent use of mutex/atomic operations could cause segfault
  details are too many, for full analysis see blog post at:
  http://blog.gerhards.net/2009/01/rsyslog-data-race-analysis.html
- bugfix: invalid ./configure settings for RFC3195
  thanks to Michael Biebl for the patch
- bugfix: invalid mutex access in msg.c
- doc bugfix: dist tarball missed 2 files, had one extra file that no
  longer belongs into it. Thanks to Michael Biebl for pointing this out.
---------------------------------------------------------------------------
Version 3.20.3 [v3-stable] (rgerhards), 2009-01-19
- doc bugfix: v3-compatiblity document had typo in config directive
  thanks to Andrej for reporting this
- fixed a potential segfault condition with $AllowedSender directive
  On HUP, the root pointers were not properly cleaned up. Thanks to
  Michael Biebel, olgoat, and Juha Koho for reporting and analyzing
  the bug.
---------------------------------------------------------------------------
Version 3.20.2 [v3-stable] (rgerhards), 2008-12-04
- re-release of 3.20.1 with an additional fix, that could also lead
  to DoS; 3.20.1 has been removed from the official download archives
- security fix: imudp emitted a message when a non-permitted sender
  tried to send a message to it. This behaviour is operator-configurable.
  If enabled, a message was emitted each time. That way an attacker could